[package]
name = "serialport"
version = "5.0.0"
edition = "2024"
description = "A cross-platform low-level serial port library."

[target."cfg(unix)".dependencies]
bitflags = "2.9.4"
nix = { version = "0.30", default-features = false, features = [
    "fs",
    "ioctl",
    "poll",
    "signal",
    "term",
] }

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
libudev = { version = "0.3.0", optional = true }
unescaper = "0.1.6"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
io-kit-sys = "0.4.1"
mach2 = "0.5.0"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.61.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Devices_Communication",
    "Win32_Devices_DeviceAndDriverInstallation",
]

[dependencies]
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["libudev"]
